--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ crashlytics-build.properties
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
 UserSettings/EditorUserSettings.asset
 UserSettings/EditorUserSettings.asset
+Assets/small low poly tree/SimpleNaturePack_URP_2019.3.unitypackage.meta
+Assets/small low poly tree/SimpleNaturePack_LWRP_2018.4.unitypackage.meta
+Assets/small low poly tree/SimpleNaturePack_HDRP_2018.4.unitypackage.meta
