Add gitignore to editor

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ UserSettings/EditorUserSettings.asset
 Assets/small low poly tree/SimpleNaturePack_URP_2019.3.unitypackage.meta
 Assets/small low poly tree/SimpleNaturePack_LWRP_2018.4.unitypackage.meta
 Assets/small low poly tree/SimpleNaturePack_HDRP_2018.4.unitypackage.meta
+UserSettings/EditorUserSettings.asset
